add client id for web.

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -38,6 +38,8 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+
+  <meta name="google-signin-client_id" content="1076489574363-234q2p79p5m7v0p72jhon685794e5dn9.apps.googleusercontent.com">
 </head>
 <body>
   <script>
